--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-color fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-color">
         <div class="container">
           <a class="navbar-brand" href="#">
               <img src="img/logo (2).png" class="logo" alt="">
