--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
 
-    <section class="container">
+    <section class="container pt-1">
       <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
